# cpp-plot-library

./: CMakeLists.txt  cpp_Plot_LIbrary.cpp
cplotlib/: commontypes.h  core.hpp
cplotlib/ax/: ax.cpp  ax.hpp
cplotlib/ax/ax_components/: axobject.cpp  axobject.hpp
cplotlib/ax/ax_components/ax_background/: ax_background.cpp  ax_background.hpp
cplotlib/ax/ax_components/ax_border/: ax_border.cpp  ax_border.hpp
cplotlib/ax/ax_components/chart_background/: chart_background.cpp  chart_background.hpp
cplotlib/ax/ax_components/chart_border/: chart_border.cpp  chart_border.hpp
cplotlib/ax/ax_components/grid/: grid.cpp  grid.hpp
cplotlib/ax/ax_components/label/: label.cpp  label.hpp
cplotlib/ax/ax_components/label/xlabel/: xlabel.cpp  xlabel.hpp
cplotlib/ax/ax_components/label/ylabel/: ylabel.cpp  ylabel.hpp
cplotlib/ax/ax_components/legend/: legend.cpp  legend.hpp
cplotlib/ax/ax_components/ticks/: ticks.cpp  ticks.hpp
cplotlib/ax/ax_components/title/: title.cpp  title.hpp
cplotlib/ax/frametext/: frametext.hpp
cplotlib/ax/plots/: plots_settings.hpp
cplotlib/ax/plots/plot/: plot.cpp  plot.hpp
cplotlib/axesManager/: axesManager.cpp  axesManager.hpp
cplotlib/figure/: figure.cpp  figure.hpp
cplotlib/figure/fig_background/: fig_background.cpp  fig_background.hpp
cplotlib/figure/fig_title/: fig_title.cpp  fig_title.hpp
cplotlib/frame_border/: frame_border.cpp  frame_border.hpp
cplotlib/refresh_handler/: refresh_handler.cpp  refresh_handler.hpp
cplotlib/tools/colors/: colors.hpp
cplotlib/tools/frametext/: frametext.cpp  frametext.hpp
cplotlib/tools/vector_creation_routines/: vector_creation_routines.cpp  vector_creation_routines.hpp
tools/matrix_linalg/: matrix_linalg.cpp  matrix_linalg.hpp
tools/string_processing/: string_processing.cpp  string_processing.hpp
tools/txt_cv_mat_reader/: txt_cv_mat_reader.cpp  txt_cv_mat_reader.hpp
